[gd_scene load_steps=5 format=3 uid="uid://dribsdx1ilqee"]

[ext_resource type="Script" path="res://ants/baseANT.gd" id="1_pigu2"]
[ext_resource type="Texture2D" uid="uid://1tvhk4xwx1nu" path="res://ui/ants/ants.ase" id="2_5uvfv"]

[sub_resource type="Animation" id="Animation_754dl"]
resource_name = "walk"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AntSprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(0, 0, 64, 64), Rect2(64, 0, 64, 64), Rect2(128, 0, 64, 64)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f6qvg"]
_data = {
"walk": SubResource("Animation_754dl")
}

[node name="baseANT" type="Node2D"]
script = ExtResource("1_pigu2")

[node name="AntSprite" type="Sprite2D" parent="."]
z_index = 4
texture_filter = 1
rotation = 1.5708
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_5uvfv")
region_enabled = true
region_rect = Rect2(128, 0, 64, 64)

[node name="Lifetime" type="Timer" parent="."]
wait_time = 120.0
one_shot = true
autostart = true

[node name="UntilHunger" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="UntilStarvation" type="Timer" parent="."]
one_shot = true

[node name="UntilRest" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="UntilActive" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="UntilStart" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f6qvg")
}
speed_scale = 2.0

[connection signal="timeout" from="Lifetime" to="." method="die"]
[connection signal="timeout" from="UntilStart" to="." method="_on_until_start_timeout"]
